@@ -1,3 +1,8 @@
+2008-11-11  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Introduce DBFDeleteField() function from Martin Dobias.
+	http://trac.osgeo.org/gdal/ticket/2671
+
 2008-03-14  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Correct crash on buggy geometries (Even Rouault).
